--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(CMAKE_CXX_STANDARD 17)
 # options de compilations en fonction du toolchain
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 	message(STATUS "Detected GCC compiler")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mtune=native -march=native -mavx2 -Ofast -g")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mtune=native -march=native -mavx2 -Ofast -funroll-loops -ftree-vectorize -g")
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 	message(STATUS "Detected Clang compiler")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mtune=native -march=native -mavx2 -O3 -fvectorize -ffast-math -funroll-loops -fslp-vectorize -mllvm -vectorize-loops -Rpass=loop-vectorize -Rpass-missed=loop-vectorize -Rpass-analysis=loop-vectorize  -g") # no longuer Ofast in modern clang++
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mtune=native -march=native -mavx2 -O3 -fvectorize -ffast-math -funroll-loops -fslp-vectorize -mllvm -vectorize-loops -fstrict-aliasing -Rpass=loop-vectorize -Rpass-missed=loop-vectorize -Rpass-analysis=loop-vectorize  -g") # no longuer Ofast in modern clang++
 else()
 	message(STATUS "Unknown Compiler : ${CMAKE_CXX8COMPILER_ID}")
 	message(STATUS "Select non-custom compilation flags")
