Add strided find
	-	Add strided find to compare SOA vs AOS find through iterator
	-	find on AOS is SLOOOOOOOOWW
	-	intrinsic faster than naive AOS by a factor 12 .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ find_package(benchmark REQUIRED)
 include_directories(include)
 
 add_executable(naive src/naive.cpp)
+add_executable(naive_strided src/naive_strided.cpp)
+
 add_executable(nobreak src/nobreak.cpp)
 add_executable(compare src/compare.cpp)
 
